--- a/data preparation - updated.ipynb
+++ b/data preparation - updated.ipynb
@@ -1810,274 +1810,140 @@
    "outputs": [],
    "source": [
     "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "from sklearn.datasets import load_iris\n",
-    "from sklearn.feature_selection import SelectFromModel\n",
-    "#iris = load_iris()\n",
-    "#X, y = iris.data, iris.target\n",
-    "#X\n"
+    "from sklearn.feature_selection import SelectFromModel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = df.values[:,4:5]\n",
-    "y = df.values[:,1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>log_price</th>\n",
-       "      <th>property_type</th>\n",
-       "      <th>room_type</th>\n",
-       "      <th>accommodates</th>\n",
-       "      <th>bathrooms</th>\n",
-       "      <th>bed_type</th>\n",
-       "      <th>cancellation_policy</th>\n",
-       "      <th>cleaning_fee</th>\n",
-       "      <th>city</th>\n",
-       "      <th>host_has_profile_pic</th>\n",
-       "      <th>...</th>\n",
-       "      <th>bedrooms</th>\n",
-       "      <th>beds</th>\n",
-       "      <th>Airconditioning</th>\n",
-       "      <th>Wireless Internet</th>\n",
-       "      <th>Kitchen</th>\n",
-       "      <th>Heating</th>\n",
-       "      <th>TV</th>\n",
-       "      <th>Cable TV</th>\n",
-       "      <th>Pool</th>\n",
-       "      <th>Breakfast</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.010635</td>\n",
-       "      <td>Apartment</td>\n",
-       "      <td>Entire home/apt</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Real Bed</td>\n",
-       "      <td>strict</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NYC</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5.129899</td>\n",
-       "      <td>Apartment</td>\n",
-       "      <td>Entire home/apt</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Real Bed</td>\n",
-       "      <td>strict</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NYC</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.976734</td>\n",
-       "      <td>Apartment</td>\n",
-       "      <td>Entire home/apt</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Real Bed</td>\n",
-       "      <td>moderate</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NYC</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6.620073</td>\n",
-       "      <td>House</td>\n",
-       "      <td>Entire home/apt</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Real Bed</td>\n",
-       "      <td>flexible</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4.744932</td>\n",
-       "      <td>Apartment</td>\n",
-       "      <td>Entire home/apt</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Real Bed</td>\n",
-       "      <td>moderate</td>\n",
-       "      <td>1</td>\n",
-       "      <td>DC</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   log_price property_type        room_type  accommodates  bathrooms  \\\n",
-       "0   5.010635     Apartment  Entire home/apt             3        1.0   \n",
-       "1   5.129899     Apartment  Entire home/apt             7        1.0   \n",
-       "2   4.976734     Apartment  Entire home/apt             5        1.0   \n",
-       "3   6.620073         House  Entire home/apt             4        1.0   \n",
-       "4   4.744932     Apartment  Entire home/apt             2        1.0   \n",
-       "\n",
-       "   bed_type cancellation_policy  cleaning_fee city  host_has_profile_pic  \\\n",
-       "0  Real Bed              strict             1  NYC                     1   \n",
-       "1  Real Bed              strict             1  NYC                     1   \n",
-       "2  Real Bed            moderate             1  NYC                     1   \n",
-       "3  Real Bed            flexible             1   SF                     1   \n",
-       "4  Real Bed            moderate             1   DC                     1   \n",
-       "\n",
-       "     ...      bedrooms  beds Airconditioning  Wireless Internet  Kitchen  \\\n",
-       "0    ...           1.0   1.0            True               True     True   \n",
-       "1    ...           3.0   3.0            True               True     True   \n",
-       "2    ...           1.0   3.0            True               True     True   \n",
-       "3    ...           2.0   2.0           False               True     True   \n",
-       "4    ...           0.0   1.0            True               True     True   \n",
-       "\n",
-       "   Heating     TV  Cable TV   Pool  Breakfast  \n",
-       "0     True  False     False  False      False  \n",
-       "1     True  False     False  False      False  \n",
-       "2     True   True      True  False       True  \n",
-       "3     True   True      True  False      False  \n",
-       "4     True   True     False  False      False  \n",
-       "\n",
-       "[5 rows x 23 columns]"
+       "(74111, 8)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "X = df.values[:,15:23]\n",
+    "y = df.values[:,1]\n",
+    "X.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Input contains NaN, infinity or a value too large for dtype('float32').",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-80-74532f30bbea>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mclf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mExtraTreesClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_estimators\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m50\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mclf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeature_importances_\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSelectFromModel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprefit\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mX_new\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\forest.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[0;32m    245\u001b[0m         \"\"\"\n\u001b[0;32m    246\u001b[0m         \u001b[1;31m# Validate or convert input data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 247\u001b[1;33m         \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"csc\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mDTYPE\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    248\u001b[0m         \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'csc'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    249\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0msample_weight\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[0;32m    451\u001b[0m                              % (array.ndim, estimator_name))\n\u001b[0;32m    452\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mforce_all_finite\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 453\u001b[1;33m             \u001b[0m_assert_all_finite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    454\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    455\u001b[0m     \u001b[0mshape_repr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_shape_repr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36m_assert_all_finite\u001b[1;34m(X)\u001b[0m\n\u001b[0;32m     42\u001b[0m             and not np.isfinite(X).all()):\n\u001b[0;32m     43\u001b[0m         raise ValueError(\"Input contains NaN, infinity\"\n\u001b[1;32m---> 44\u001b[1;33m                          \" or a value too large for %r.\" % X.dtype)\n\u001b[0m\u001b[0;32m     45\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Input contains NaN, infinity or a value too large for dtype('float32')."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 74111 entries, 0 to 74110\n",
+      "Data columns (total 23 columns):\n",
+      "log_price                 74111 non-null float64\n",
+      "property_type             74111 non-null category\n",
+      "room_type                 74111 non-null category\n",
+      "accommodates              74111 non-null int64\n",
+      "bathrooms                 73911 non-null float64\n",
+      "bed_type                  74111 non-null category\n",
+      "cancellation_policy       74111 non-null category\n",
+      "cleaning_fee              74111 non-null int64\n",
+      "city                      74111 non-null object\n",
+      "host_has_profile_pic      74111 non-null int64\n",
+      "host_identity_verified    74111 non-null int64\n",
+      "instant_bookable          74111 non-null int64\n",
+      "neighbourhood             67239 non-null category\n",
+      "bedrooms                  74020 non-null float64\n",
+      "beds                      73980 non-null float64\n",
+      "Airconditioning           74111 non-null bool\n",
+      "Wireless Internet         74111 non-null bool\n",
+      "Kitchen                   74111 non-null bool\n",
+      "Heating                   74111 non-null bool\n",
+      "TV                        74111 non-null bool\n",
+      "Cable TV                  74111 non-null bool\n",
+      "Pool                      74111 non-null bool\n",
+      "Breakfast                 74111 non-null bool\n",
+      "dtypes: bool(8), category(5), float64(4), int64(5), object(1)\n",
+      "memory usage: 6.7+ MB\n"
      ]
     }
    ],
    "source": [
-    "clf = ExtraTreesClassifier(n_estimators=50)\n",
-    "clf = clf.fit(X, y)\n",
-    "clf.feature_importances_  \n",
-    "model = SelectFromModel(clf, prefit=True)\n",
-    "X_new = model.transform(X)\n",
-    "X_new               \n"
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.17656098, 0.02749804, 0.43869237, 0.03814521, 0.0376753 ,\n",
+       "       0.10311768, 0.03152993, 0.14678049])"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = ExtraTreesClassifier()\n",
+    "clf = clf.fit(X, y)\n",
+    "clf.feature_importances_  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(74111, 2)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = SelectFromModel(clf, prefit=True)\n",
+    "X_new = model.transform(X)\n",
+    "X_new.shape        \n",
+    "#print(model.get_support()) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function ndarray.tostring>"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_new."
+   ]
   },
   {
    "cell_type": "code",
