--- a/Data final.ipynb
+++ b/Data final.ipynb
@@ -2,241 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>log_price</th>\n",
-       "      <th>property_type</th>\n",
-       "      <th>room_type</th>\n",
-       "      <th>amenities</th>\n",
-       "      <th>accommodates</th>\n",
-       "      <th>bathrooms</th>\n",
-       "      <th>bed_type</th>\n",
-       "      <th>cancellation_policy</th>\n",
-       "      <th>cleaning_fee</th>\n",
-       "      <th>...</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>name</th>\n",
-       "      <th>neighbourhood</th>\n",
-       "      <th>number_of_reviews</th>\n",
-       "      <th>review_scores_rating</th>\n",
-       "      <th>thumbnail_url</th>\n",
-       "      <th>zipcode</th>\n",
-       "      <th>bedrooms</th>\n",
-       "      <th>beds</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6901257</td>\n",
-       "      <td>5.010635</td>\n",
-       "      <td>Apartment</td>\n",
-       "      <td>Entire home/apt</td>\n",
-       "      <td>{\"Wireless Internet\",\"Air conditioning\",Kitche...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Real Bed</td>\n",
-       "      <td>strict</td>\n",
-       "      <td>True</td>\n",
-       "      <td>...</td>\n",
-       "      <td>40.696524</td>\n",
-       "      <td>-73.991617</td>\n",
-       "      <td>Beautiful brownstone 1-bedroom</td>\n",
-       "      <td>Brooklyn Heights</td>\n",
-       "      <td>2</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>https://a0.muscache.com/im/pictures/6d7cbbf7-c...</td>\n",
-       "      <td>11201</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6304928</td>\n",
-       "      <td>5.129899</td>\n",
-       "      <td>Apartment</td>\n",
-       "      <td>Entire home/apt</td>\n",
-       "      <td>{\"Wireless Internet\",\"Air conditioning\",Kitche...</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Real Bed</td>\n",
-       "      <td>strict</td>\n",
-       "      <td>True</td>\n",
-       "      <td>...</td>\n",
-       "      <td>40.766115</td>\n",
-       "      <td>-73.989040</td>\n",
-       "      <td>Superb 3BR Apt Located Near Times Square</td>\n",
-       "      <td>Hell's Kitchen</td>\n",
-       "      <td>6</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>https://a0.muscache.com/im/pictures/348a55fe-4...</td>\n",
-       "      <td>10019</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7919400</td>\n",
-       "      <td>4.976734</td>\n",
-       "      <td>Apartment</td>\n",
-       "      <td>Entire home/apt</td>\n",
-       "      <td>{TV,\"Cable TV\",\"Wireless Internet\",\"Air condit...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Real Bed</td>\n",
-       "      <td>moderate</td>\n",
-       "      <td>True</td>\n",
-       "      <td>...</td>\n",
-       "      <td>40.808110</td>\n",
-       "      <td>-73.943756</td>\n",
-       "      <td>The Garden Oasis</td>\n",
-       "      <td>Harlem</td>\n",
-       "      <td>10</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>https://a0.muscache.com/im/pictures/6fae5362-9...</td>\n",
-       "      <td>10027</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>13418779</td>\n",
-       "      <td>6.620073</td>\n",
-       "      <td>House</td>\n",
-       "      <td>Entire home/apt</td>\n",
-       "      <td>{TV,\"Cable TV\",Internet,\"Wireless Internet\",Ki...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Real Bed</td>\n",
-       "      <td>flexible</td>\n",
-       "      <td>True</td>\n",
-       "      <td>...</td>\n",
-       "      <td>37.772004</td>\n",
-       "      <td>-122.431619</td>\n",
-       "      <td>Beautiful Flat in the Heart of SF!</td>\n",
-       "      <td>Lower Haight</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://a0.muscache.com/im/pictures/72208dad-9...</td>\n",
-       "      <td>94117</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3808709</td>\n",
-       "      <td>4.744932</td>\n",
-       "      <td>Apartment</td>\n",
-       "      <td>Entire home/apt</td>\n",
-       "      <td>{TV,Internet,\"Wireless Internet\",\"Air conditio...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Real Bed</td>\n",
-       "      <td>moderate</td>\n",
-       "      <td>True</td>\n",
-       "      <td>...</td>\n",
-       "      <td>38.925627</td>\n",
-       "      <td>-77.034596</td>\n",
-       "      <td>Great studio in midtown DC</td>\n",
-       "      <td>Columbia Heights</td>\n",
-       "      <td>4</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>20009</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 29 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         id  log_price property_type        room_type  \\\n",
-       "0   6901257   5.010635     Apartment  Entire home/apt   \n",
-       "1   6304928   5.129899     Apartment  Entire home/apt   \n",
-       "2   7919400   4.976734     Apartment  Entire home/apt   \n",
-       "3  13418779   6.620073         House  Entire home/apt   \n",
-       "4   3808709   4.744932     Apartment  Entire home/apt   \n",
-       "\n",
-       "                                           amenities  accommodates  bathrooms  \\\n",
-       "0  {\"Wireless Internet\",\"Air conditioning\",Kitche...             3        1.0   \n",
-       "1  {\"Wireless Internet\",\"Air conditioning\",Kitche...             7        1.0   \n",
-       "2  {TV,\"Cable TV\",\"Wireless Internet\",\"Air condit...             5        1.0   \n",
-       "3  {TV,\"Cable TV\",Internet,\"Wireless Internet\",Ki...             4        1.0   \n",
-       "4  {TV,Internet,\"Wireless Internet\",\"Air conditio...             2        1.0   \n",
-       "\n",
-       "   bed_type cancellation_policy  cleaning_fee  ...    latitude   longitude  \\\n",
-       "0  Real Bed              strict          True  ...   40.696524  -73.991617   \n",
-       "1  Real Bed              strict          True  ...   40.766115  -73.989040   \n",
-       "2  Real Bed            moderate          True  ...   40.808110  -73.943756   \n",
-       "3  Real Bed            flexible          True  ...   37.772004 -122.431619   \n",
-       "4  Real Bed            moderate          True  ...   38.925627  -77.034596   \n",
-       "\n",
-       "                                       name     neighbourhood  \\\n",
-       "0            Beautiful brownstone 1-bedroom  Brooklyn Heights   \n",
-       "1  Superb 3BR Apt Located Near Times Square    Hell's Kitchen   \n",
-       "2                          The Garden Oasis            Harlem   \n",
-       "3        Beautiful Flat in the Heart of SF!      Lower Haight   \n",
-       "4                Great studio in midtown DC  Columbia Heights   \n",
-       "\n",
-       "  number_of_reviews review_scores_rating  \\\n",
-       "0                 2                100.0   \n",
-       "1                 6                 93.0   \n",
-       "2                10                 92.0   \n",
-       "3                 0                  NaN   \n",
-       "4                 4                 40.0   \n",
-       "\n",
-       "                                       thumbnail_url zipcode bedrooms  beds  \n",
-       "0  https://a0.muscache.com/im/pictures/6d7cbbf7-c...   11201      1.0   1.0  \n",
-       "1  https://a0.muscache.com/im/pictures/348a55fe-4...   10019      3.0   3.0  \n",
-       "2  https://a0.muscache.com/im/pictures/6fae5362-9...   10027      1.0   3.0  \n",
-       "3  https://a0.muscache.com/im/pictures/72208dad-9...   94117      2.0   2.0  \n",
-       "4                                                NaN   20009      0.0   1.0  \n",
-       "\n",
-       "[5 rows x 29 columns]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 74111 entries, 0 to 74110\n",
+      "Data columns (total 29 columns):\n",
+      "id                        74111 non-null int64\n",
+      "log_price                 74111 non-null float64\n",
+      "property_type             74111 non-null object\n",
+      "room_type                 74111 non-null object\n",
+      "amenities                 74111 non-null object\n",
+      "accommodates              74111 non-null int64\n",
+      "bathrooms                 73911 non-null float64\n",
+      "bed_type                  74111 non-null object\n",
+      "cancellation_policy       74111 non-null object\n",
+      "cleaning_fee              74111 non-null bool\n",
+      "city                      74111 non-null object\n",
+      "description               74111 non-null object\n",
+      "first_review              58247 non-null object\n",
+      "host_has_profile_pic      73923 non-null object\n",
+      "host_identity_verified    73923 non-null object\n",
+      "host_response_rate        55812 non-null object\n",
+      "host_since                73923 non-null object\n",
+      "instant_bookable          74111 non-null object\n",
+      "last_review               58284 non-null object\n",
+      "latitude                  74111 non-null float64\n",
+      "longitude                 74111 non-null float64\n",
+      "name                      74111 non-null object\n",
+      "neighbourhood             67239 non-null object\n",
+      "number_of_reviews         74111 non-null int64\n",
+      "review_scores_rating      57389 non-null float64\n",
+      "thumbnail_url             65895 non-null object\n",
+      "zipcode                   73145 non-null object\n",
+      "bedrooms                  74020 non-null float64\n",
+      "beds                      73980 non-null float64\n",
+      "dtypes: bool(1), float64(7), int64(3), object(18)\n",
+      "memory usage: 15.9+ MB\n"
+     ]
     }
    ],
    "source": [
     "import csv\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "df = pd.read_csv(\"train.csv\")\n",
-    "df.head()"
+    "df = pd.read_csv(r\"C:\\Users\\Ao\\Desktop\\Intro to Business Analytics\\train.csv\")\n",
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -276,17 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "# exclude variables that are meaningless or are out of this project's scope\n",
-    "df = df.drop(['id', 'thumbnail_url', 'amenities', 'latitude', 'longitude', 'name', 'description'], axis=1)"
+    "df = df.drop(['id', 'thumbnail_url', 'amenities', 'latitude', 'longitude', 'name', 'description', 'neighbourhood'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,17 +116,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     73145\n",
+       "unique      669\n",
+       "top       11211\n",
+       "freq       1618\n",
+       "Name: zipcode, dtype: object"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# clean zipcode\n",
-    "df['zipcode'] = df['zipcode'].str.replace('.0', '')"
+    "df['zipcode'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +149,6 @@
     "df['room_type'] = df['room_type'].astype('category')\n",
     "df['bed_type'] = df['bed_type'].astype('category')\n",
     "df['cancellation_policy'] = df['cancellation_policy'].astype('category')\n",
-    "df['neighbourhood'] = df['neighbourhood'].astype('category')\n",
     "\n",
     "for i in ['cancellation_policy', 'property_type', 'room_type', 'bed_type', 'zipcode', 'city']:\n",
     "    df = pd.concat([df, pd.get_dummies(df[i])], axis=1)"
@@ -323,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -332,9 +165,9 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 74111 entries, 0 to 74110\n",
-      "Columns: 641 entries, log_price to SF\n",
-      "dtypes: bool(132), category(5), float64(4), int64(1), object(5), uint8(494)\n",
-      "memory usage: 50.3+ MB\n"
+      "Columns: 869 entries, log_price to SF\n",
+      "dtypes: bool(132), category(4), float64(4), int64(1), object(5), uint8(723)\n",
+      "memory usage: 66.4+ MB\n"
      ]
     }
    ],
@@ -344,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -379,8 +212,8 @@
        "      <th>city</th>\n",
        "      <th>host_has_profile_pic</th>\n",
        "      <th>...</th>\n",
-       "      <th>949</th>\n",
-       "      <th>952\r",
+       "      <th>94401</th>\n",
+       "      <th>95202\r",
        "\r",
        "\r",
        "\r",
@@ -400,7 +233,7 @@
        "\r\n",
        "94158</th>\n",
        "      <th>99135</th>\n",
-       "      <th>Near 914</th>\n",
+       "      <th>Near 91304</th>\n",
        "      <th>Boston</th>\n",
        "      <th>Chicago</th>\n",
        "      <th>DC</th>\n",
@@ -532,7 +365,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 641 columns</p>\n",
+       "<p>5 rows × 869 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -550,24 +383,24 @@
        "3  Real Bed            flexible          True   SF                    t ...   \n",
        "4  Real Bed            moderate          True   DC                    t ...   \n",
        "\n",
-       "  949 952\\r\\r\\r\\r\\r\\r\\n\\r\\r\\r\\r\\r\\r\\n\\r\\r\\r\\r\\r\\r\\n94158 99135 Near 914  \\\n",
-       "0   0                                                  0     0        0   \n",
-       "1   0                                                  0     0        0   \n",
-       "2   0                                                  0     0        0   \n",
-       "3   0                                                  0     0        0   \n",
-       "4   0                                                  0     0        0   \n",
+       "  94401 95202\\r\\r\\r\\r\\r\\r\\n\\r\\r\\r\\r\\r\\r\\n\\r\\r\\r\\r\\r\\r\\n94158 99135  \\\n",
+       "0     0                                                  0       0   \n",
+       "1     0                                                  0       0   \n",
+       "2     0                                                  0       0   \n",
+       "3     0                                                  0       0   \n",
+       "4     0                                                  0       0   \n",
        "\n",
-       "   Boston  Chicago  DC  LA  NYC  SF  \n",
-       "0       0        0   0   0    1   0  \n",
-       "1       0        0   0   0    1   0  \n",
-       "2       0        0   0   0    1   0  \n",
-       "3       0        0   0   0    0   1  \n",
-       "4       0        0   1   0    0   0  \n",
+       "   Near 91304  Boston  Chicago  DC  LA  NYC  SF  \n",
+       "0           0       0        0   0   0    1   0  \n",
+       "1           0       0        0   0   0    1   0  \n",
+       "2           0       0        0   0   0    1   0  \n",
+       "3           0       0        0   0   0    0   1  \n",
+       "4           0       0        0   1   0    0   0  \n",
        "\n",
-       "[5 rows x 641 columns]"
+       "[5 rows x 869 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,10 +411,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df1 = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 72630 entries, 0 to 74110\n",
+      "Columns: 869 entries, log_price to SF\n",
+      "dtypes: bool(132), category(4), float64(4), int64(1), object(5), uint8(723)\n",
+      "memory usage: 65.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df.drop(['cancellation_policy', 'property_type', 'room_type', 'bed_type', 'zipcode', 'city'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 74111 entries, 0 to 74110\n",
+      "Columns: 863 entries, log_price to SF\n",
+      "dtypes: bool(132), float64(4), int64(1), object(3), uint8(723)\n",
+      "memory usage: 65.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1.info()"
+   ]
   },
   {
    "cell_type": "code",
